@@ -5482,6 +5482,18 @@ operator|*
 literal|0.8
 argument_list|)
 expr_stmt|;
+name|tmp
+operator|.
+name|setReclaimDeletesWeight
+argument_list|(
+name|r
+operator|.
+name|nextDouble
+argument_list|()
+operator|*
+literal|4
+argument_list|)
+expr_stmt|;
 return|return
 name|tmp
 return|;
